Select, crossover, mutation -- select needs modification

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Final Project!
+Interesting to note that, in this case, each individual is not technically a "solution", but really part of a population, much moreso than before. Alone, each individual is useless; together, they form a "solution".
