--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 Final Project!
-Interesting to note that, in this case, each individual is not technically a "solution", but really part of a population, much moreso than before. Alone, each individual is useless; together, they form a "solution".
+
+Things to experiment with:
+Mutation amounts
+Crossover elite bias
+Presence of elitism (re-insert best)
